Overflow fixes and icons

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,14 @@
+html, body {
+    margin: 0;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
 .loading {
+    overflow: hidden;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +23,8 @@
 .loading-bill {
     position: absolute;
     z-index: 50;
+    width: 40vw;
+    height: auto;
 }
 
 .wrapper {
@@ -26,6 +38,11 @@
 
 #canvas {
     border: 1px solid black;
+}
+
+.hidden-bills-cell {
+    position: absolute;
+    overflow: hidden;
 }
 
 .hidden-bill {
